[FIX] menu wrapping

--- a/jquery.sheet.css
+++ b/jquery.sheet.css
@@ -60,7 +60,6 @@
 	border-color: inherit ! important;
 	border-width: 1px;
 	text-decoration: none ! important;
-	white-space: nowrap;
 	width: auto;
 }
 
